Add bowtie2 as aligner

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -60,14 +60,6 @@ process {
             enabled: params.save_reference
         ]
     }
-    withName: BWA_INDEX {
-        ext.args   = '-a bwtsw'
-        publishDir = [
-            path: { "${params.outdir}/genome/index" },
-            mode: 'copy',
-            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
-        ]
-    }
     withName: GFFREAD {
         ext.args   = '--keep-exon-attrs -F -T'
         publishDir = [
@@ -145,9 +137,7 @@ if (!params.skip_trimming) {
 }
 
 process {
-    withName: 'NFCORE_CHIPSEQ:CHIPSEQ:ALIGN_BWA_MEM:BAM_SORT_SAMTOOLS:SAMTOOLS_SORT' {
-    // TODO: substitute by this line when multiple aligners are implemented
-    // withName: 'NFCORE_CHIPSEQ:CHIPSEQ:.*:BAM_SORT_SAMTOOLS:SAMTOOLS_SORT' {
+    withName: 'NFCORE_CHIPSEQ:CHIPSEQ:.*:BAM_SORT_SAMTOOLS:SAMTOOLS_SORT' {
         ext.prefix = { "${meta.id}.Lb.sorted" }
         publishDir = [
             path: { "${params.outdir}/bwa/library" },
@@ -156,9 +146,7 @@ process {
             enabled: params.save_align_intermeds
         ]
     }
-    withName: 'NFCORE_CHIPSEQ:CHIPSEQ:ALIGN_BWA_MEM:BAM_SORT_SAMTOOLS:SAMTOOLS_INDEX' {
-    // TODO: substitute by this line when multiple aligners are implemented
-    // withName: 'NFCORE_CHIPSEQ:CHIPSEQ:.*:BAM_SORT_SAMTOOLS:SAMTOOLS_INDEX' {
+    withName: 'NFCORE_CHIPSEQ:CHIPSEQ:.*:BAM_SORT_SAMTOOLS:SAMTOOLS_INDEX' {
         // ext.args   = params.bam_csi_index ? '-c' : ''
         ext.prefix = { "${meta.id}.Lb.sorted" }
         publishDir = [
@@ -168,9 +156,7 @@ process {
             enabled: params.save_align_intermeds
         ]
     }
-    withName: 'NFCORE_CHIPSEQ:CHIPSEQ:ALIGN_BWA_MEM:BAM_SORT_SAMTOOLS:BAM_STATS_SAMTOOLS:.*' {
-    // TODO: substitute by this line when multiple aligners are implemented
-    // withName: 'NFCORE_CHIPSEQ:CHIPSEQ:.*:BAM_SORT_SAMTOOLS:SAMTOOLS_STATS' {
+    withName: 'NFCORE_CHIPSEQ:CHIPSEQ:.*:BAM_SORT_SAMTOOLS:BAM_STATS_SAMTOOLS:SAMTOOLS_STATS' {
         // ext.args   = params.bam_csi_index ? '-c' : ''
         ext.prefix = { "${meta.id}.Lb.sorted" }
         publishDir = [
@@ -178,67 +164,69 @@ process {
             mode: 'copy',
             pattern: "*.{stats,flagstat,idxstats}",
             enabled: params.save_align_intermeds
-        ]
-    }
-    withName: BWA_MEM {
-        ext.args   = [
-                        '-M',
-                        params.bwa_min_score ? " -T ${params.bwa_min_score}" : ''
-                    ].join(' ').trim()
-        ext.args2  = '-h -F 0x0100 -O BAM'
-        ext.prefix = { "${meta.id}.Lb" }
-        publishDir = [
-            path: { "${params.outdir}/bwa/library" },
-            mode: 'copy',
-            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
     }
 }
 
-process {
-    withName: 'NFCORE_CHIPSEQ:CHIPSEQ:ALIGN_CHROMAP:BAM_SORT_SAMTOOLS:SAMTOOLS_SORT' {
-    // TODO: substitute by this line when multiple aligners are implemented
-    // withName: 'NFCORE_CHIPSEQ:CHIPSEQ:.*:BAM_SORT_SAMTOOLS:SAMTOOLS_SORT' {
-        ext.prefix = { "${meta.id}.Lb.sorted" }
-        publishDir = [
-            path: { "${params.outdir}/chromap/library" },
-            mode: 'copy',
-            pattern: "*.bam",
-            enabled: params.save_align_intermeds
-        ]
+if (params.aligner == 'bwa') {
+    process {
+        withName: BWA_INDEX {
+            ext.args   = '-a bwtsw'
+            publishDir = [
+                path: { "${params.outdir}/genome/${params.aligner}/index" },
+                mode: 'copy',
+                saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+            ]
+        }
+        withName: BWA_MEM {
+            ext.args   = [
+                            '-M',
+                            params.bwa_min_score ? " -T ${params.bwa_min_score}" : ''
+                        ].join(' ').trim()
+            ext.args2  = '-h -F 0x0100 -O BAM'
+            ext.prefix = { "${meta.id}.Lb" }
+            publishDir = [
+                path: { "${params.outdir}/${params.aligner}/library" },
+                mode: 'copy',
+                saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+            ]
+        }
     }
-    withName: 'NFCORE_CHIPSEQ:CHIPSEQ:ALIGN_CHROMAP:BAM_SORT_SAMTOOLS:SAMTOOLS_INDEX' {
-    // TODO: substitute by this line when multiple aligners are implemented
-    // withName: 'NFCORE_CHIPSEQ:CHIPSEQ:.*:BAM_SORT_SAMTOOLS:SAMTOOLS_INDEX' {
-        // ext.args   = params.bam_csi_index ? '-c' : ''
-        ext.prefix = { "${meta.id}.Lb.sorted" }
-        publishDir = [
-            path: { "${params.outdir}/chromap/library" },
-            mode: 'copy',
-            pattern: '*.{bai,csi}',
-            enabled: params.save_align_intermeds
-        ]
+}
+
+if (params.aligner == 'bowtie2') {
+    process {
+        withName: BOWTIE2_BUILD {
+            ext.args   = ''
+            publishDir = [
+                path: { "${params.outdir}/genome/${params.aligner}/index" },
+                mode: 'copy',
+                saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+            ]
+        }
+        withName: BOWTIE2_ALIGN {
+            ext.args   = ''
+            ext.prefix = { "${meta.id}.Lb" }
+            publishDir = [
+                path: { "${params.outdir}/${params.aligner}/library" },
+                mode: 'copy',
+                saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+            ]
+        }
     }
-    withName: 'NFCORE_CHIPSEQ:CHIPSEQ:ALIGN_CHROMAP:BAM_SORT_SAMTOOLS:BAM_STATS_SAMTOOLS:.*' {
-    // TODO: substitute by this line when multiple aligners are implemented
-    // withName: 'NFCORE_CHIPSEQ:CHIPSEQ:.*:BAM_SORT_SAMTOOLS:SAMTOOLS_STATS' {
-        // ext.args   = params.bam_csi_index ? '-c' : ''
-        ext.prefix = { "${meta.id}.Lb.sorted" }
-        publishDir = [
-            path: { "${params.outdir}/chromap/library" },
-            mode: 'copy',
-            pattern: "*.{stats,flagstat,idxstats}",
-            enabled: params.save_align_intermeds
-        ]
-    }
-    withName: CHROMAP_CHROMAP {
-        ext.args   = '--preset chip'
-        ext.prefix = { "${meta.id}.Lb" }
-        publishDir = [
-            path: { "${params.outdir}/chromap/library" },
-            mode: 'copy',
-            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
-        ]
+}
+
+if (params.aligner == 'chromap') {
+    process {
+        withName: CHROMAP_CHROMAP {
+            ext.args   = '--preset chip'
+            ext.prefix = { "${meta.id}.Lb" }
+            publishDir = [
+                path: { "${params.outdir}/${params.aligner}/library" },
+                mode: 'copy',
+                saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+            ]
+        }
     }
 }
 
