Add star to modules config

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -218,6 +218,14 @@ if (params.aligner == 'bowtie2') {
 
 if (params.aligner == 'chromap') {
     process {
+        withName: CHROMAP_INDEX {
+            ext.args   = ''
+            publishDir = [
+                path: { "${params.outdir}/genome/${params.aligner}/index" },
+                mode: 'copy',
+                saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+            ]
+        }
         withName: CHROMAP_CHROMAP {
             ext.args   = '--preset chip'
             ext.prefix = { "${meta.id}.Lb" }
@@ -225,6 +233,48 @@ if (params.aligner == 'chromap') {
                 path: { "${params.outdir}/${params.aligner}/library" },
                 mode: 'copy',
                 saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+            ]
+        }
+    }
+}
+
+if (params.aligner == 'star') {
+    process {
+        withName: STAR_GENOMEGENERATE {
+            ext.args   = ''
+            publishDir = [
+                path: { "${params.outdir}/genome/${params.aligner}/index" },
+                mode: 'copy',
+                saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+            ]
+        }
+        withName: '.*:ALIGN_STAR:STAR_ALIGN' {
+            ext.args   = [
+                '--outSAMtype BAM Unsorted',
+                '--readFilesCommand zcat',
+                '--runRNGseed 0',
+                // '--outFilterMultimapNmax 20', //DEL
+                '--outSAMattributes NH HI AS NM MD'
+                // params.save_unaligned ? '--outReadsUnmapped Fastx' : '' //TODO
+            ].join(' ').trim()
+            publishDir = [
+                [
+                    path: { "${params.outdir}/${params.aligner}/log" },
+                    mode: 'copy',
+                    pattern: '*.{out,tab}'
+                ],
+                [
+                    path: { "${params.outdir}/${params.aligner}" },
+                    mode: 'copy',
+                    pattern: '*.bam',
+                    // enabled: params.save_align_intermeds //TODO
+                ],
+                [
+                    path: { "${params.outdir}/${params.aligner}/unmapped" },
+                    mode: 'copy',
+                    pattern: '*.fastq.gz',
+                    // enabled: params.save_unaligned //TODO
+                ]
             ]
         }
     }
