Add save_unaligned parameter

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -254,8 +254,8 @@ if (params.aligner == 'star') {
                 '--readFilesCommand zcat',
                 '--runRNGseed 0',
                 // '--outFilterMultimapNmax 20', //DEL
-                '--outSAMattributes NH HI AS NM MD'
-                // params.save_unaligned ? '--outReadsUnmapped Fastx' : '' //TODO
+                '--outSAMattributes NH HI AS NM MD',
+                params.save_unaligned ? '--outReadsUnmapped Fastx' : ''
             ].join(' ').trim()
             publishDir = [
                 [
@@ -267,13 +267,15 @@ if (params.aligner == 'star') {
                     path: { "${params.outdir}/${params.aligner}" },
                     mode: 'copy',
                     pattern: '*.bam',
-                    // enabled: params.save_align_intermeds //TODO
+                    // TODO
+                    // enabled: params.save_align_intermeds
+                    enabled: false
                 ],
                 [
                     path: { "${params.outdir}/${params.aligner}/unmapped" },
                     mode: 'copy',
                     pattern: '*.fastq.gz',
-                    // enabled: params.save_unaligned //TODO
+                    enabled: params.save_unaligned
                 ]
             ]
         }
