--- a/nextflow.config
+++ b/nextflow.config
@@ -35,6 +35,7 @@ params {
     keep_dups                  = false
     keep_multi_map             = false
     save_align_intermeds       = false
+    save_unaligned             = false
 
     // Options: Peaks
     narrow_peak                = false
