Add --SAM argument to chromap

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -227,7 +227,10 @@ if (params.aligner == 'chromap') {
             ]
         }
         withName: CHROMAP_CHROMAP {
-            ext.args   = '--preset chip'
+            ext.args   = [
+                            '--preset chip',
+                            '--SAM'
+                        ].join(' ').trim()
             ext.prefix = { "${meta.id}.Lb" }
             publishDir = [
                 path: { "${params.outdir}/${params.aligner}/library" },
