Update star align config

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -253,10 +253,12 @@ if (params.aligner == 'star') {
         }
         withName: '.*:ALIGN_STAR:STAR_ALIGN' {
             ext.args   = [
+                '--runMode alignReads',
+                '--alignIntronMax 1',
+                '--alignEndsType EndToEnd',
                 '--outSAMtype BAM Unsorted',
                 '--readFilesCommand zcat',
                 '--runRNGseed 0',
-                // '--outFilterMultimapNmax 20', //DEL
                 '--outSAMattributes NH HI AS NM MD',
                 params.save_unaligned ? '--outReadsUnmapped Fastx' : ''
             ].join(' ').trim()
