Separate outputs by aligner

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -140,7 +140,7 @@ process {
     withName: 'NFCORE_CHIPSEQ:CHIPSEQ:.*:BAM_SORT_SAMTOOLS:SAMTOOLS_SORT' {
         ext.prefix = { "${meta.id}.Lb.sorted" }
         publishDir = [
-            path: { "${params.outdir}/bwa/library" },
+            path: { "${params.outdir}/${params.aligner}/library" },
             mode: 'copy',
             pattern: "*.bam",
             enabled: params.save_align_intermeds
@@ -150,7 +150,7 @@ process {
         // ext.args   = params.bam_csi_index ? '-c' : ''
         ext.prefix = { "${meta.id}.Lb.sorted" }
         publishDir = [
-            path: { "${params.outdir}/bwa/library" },
+            path: { "${params.outdir}/${params.aligner}/library" },
             mode: 'copy',
             pattern: '*.{bai,csi}',
             enabled: params.save_align_intermeds
@@ -160,7 +160,7 @@ process {
         // ext.args   = params.bam_csi_index ? '-c' : ''
         ext.prefix = { "${meta.id}.Lb.sorted" }
         publishDir = [
-            path: { "${params.outdir}/bwa/library" },
+            path: { "${params.outdir}/${params.aligner}/library" },
             mode: 'copy',
             pattern: "*.{stats,flagstat,idxstats}",
             enabled: params.save_align_intermeds
@@ -267,7 +267,7 @@ process {
         ext.args   = 'SORT_ORDER=coordinate VALIDATION_STRINGENCY=LENIENT TMP_DIR=tmp'
         ext.prefix = { "${meta.id}.mLb.sorted" }
         publishDir = [
-            path: { "${params.outdir}/bwa/mergedLibrary" },
+            path: { "${params.outdir}/${params.aligner}/mergedLibrary" },
             mode: 'copy',
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
@@ -277,12 +277,12 @@ process {
         ext.prefix = { "${meta.id}.mLb.mkD.sorted" }
         publishDir = [
             [
-                path: { "${params.outdir}/bwa/mergedLibrary" },
+                path: { "${params.outdir}/${params.aligner}/mergedLibrary" },
                 mode: 'copy',
                 pattern: '*metrics.txt'
             ],
             [
-                path: { "${params.outdir}/bwa/mergedLibrary" },
+                path: { "${params.outdir}/${params.aligner}/mergedLibrary" },
                 mode: 'copy',
                 pattern: '*.bam'
             ]
@@ -292,14 +292,14 @@ process {
         // ext.args   = params.bam_csi_index ? '-c' : '' // TODO implement it
         ext.prefix = { "${meta.id}.mkD.sorted" }
         publishDir = [
-            path: { "${params.outdir}/bwa/mergedLibrary" },
+            path: { "${params.outdir}/${params.aligner}/mergedLibrary" },
             mode: 'copy',
             pattern: '*.{bai,csi}'
         ]
     }
     withName: '.*:MARK_DUPLICATES_PICARD:BAM_STATS_SAMTOOLS:.*' {
         publishDir = [
-            path: { "${params.outdir}/bwa/samtools_stats" },
+            path: { "${params.outdir}/${params.aligner}/samtools_stats" },
             mode: 'copy',
             pattern: '*.{stats,flagstat,idxstats}'
         ]
@@ -307,7 +307,7 @@ process {
     withName: BAM_FILTER {
         ext.prefix = { "${meta.id}.mLb.flT.sorted" }
         publishDir = [
-            path: { "${params.outdir}/bwa/mergedLibrary" },
+            path: { "${params.outdir}/${params.aligner}/mergedLibrary" },
             mode: 'copy',
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
@@ -316,7 +316,7 @@ process {
         ext.args   = '--only_fr_pairs'
         ext.prefix = { "${meta.id}.mLb.clN" }
         publishDir = [
-            path: { "${params.outdir}/bwa/mergedLibrary" },
+            path: { "${params.outdir}/${params.aligner}/mergedLibrary" },
             mode: 'copy',
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
@@ -324,7 +324,7 @@ process {
     withName: 'NFCORE_CHIPSEQ:CHIPSEQ:FILTER_BAM_BAMTOOLS:BAM_SORT_SAMTOOLS:SAMTOOLS_SORT' {
         ext.prefix = { "${meta.id}.mLb.clN.sorted" }
         publishDir = [
-            path: { "${params.outdir}/bwa/mergedLibrary" },
+            path: { "${params.outdir}/${params.aligner}/mergedLibrary" },
             mode: 'copy',
             pattern: '*.{bai,csi}'
         ]
@@ -332,7 +332,7 @@ process {
     withName: 'NFCORE_CHIPSEQ:CHIPSEQ:FILTER_BAM_BAMTOOLS:BAM_SORT_SAMTOOLS:SAMTOOLS_INDEX' {
         ext.prefix = { "${meta.id}.mLb.clN.sorted" }
         publishDir = [
-            path: { "${params.outdir}/bwa/mergedLibrary" },
+            path: { "${params.outdir}/${params.aligner}/mergedLibrary" },
             mode: 'copy',
             pattern: "*.bam"
         ]
@@ -340,7 +340,7 @@ process {
     withName: 'NFCORE_CHIPSEQ:CHIPSEQ:FILTER_BAM_BAMTOOLS:BAM_SORT_SAMTOOLS:BAM_STATS_SAMTOOLS:.*' {
         ext.prefix = { "${meta.id}.mLb.clN.sorted" }
         publishDir = [
-            path: { "${params.outdir}/bwa/library" },
+            path: { "${params.outdir}/${params.aligner}/library" },
             mode: 'copy',
             pattern: "*.{stats,flagstat,idxstats}"
         ]
@@ -348,7 +348,7 @@ process {
     withName: PHANTOMPEAKQUALTOOLS {
         ext.prefix = { "${meta.id}.mLb.clN" }
         publishDir = [
-            path: { "${params.outdir}/bwa/mergedLibrary/phantompeakqualtools" },
+            path: { "${params.outdir}/${params.aligner}/mergedLibrary/phantompeakqualtools" },
             mode: 'copy',
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
@@ -362,7 +362,7 @@ process {
     withName: BEDTOOLS_GENOMECOV {
         ext.prefix = { "${meta.id}.mLb.clN" }
         publishDir = [
-            path: { "${params.outdir}/bwa/mergedLibrary/bigwig" },
+            path: { "${params.outdir}/${params.aligner}/mergedLibrary/bigwig" },
             mode: 'copy',
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
@@ -370,7 +370,7 @@ process {
     withName: UCSC_BEDGRAPHTOBIGWIG {
         ext.prefix = { "${meta.id}.mLb.clN" }
         publishDir = [
-            path: { "${params.outdir}/bwa/mergedLibrary/bigwig" },
+            path: { "${params.outdir}/${params.aligner}/mergedLibrary/bigwig" },
             mode: 'copy',
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
@@ -383,7 +383,7 @@ if (!params.skip_picard_metrics) {
             ext.args   = 'VALIDATION_STRINGENCY=LENIENT TMP_DIR=tmp'
             ext.prefix = { "${meta.id}.mLb.clN.sorted" }
             publishDir = [
-                path: { "${params.outdir}/bwa/mergedLibrary/picard_metrics" },
+                path: { "${params.outdir}/${params.aligner}/mergedLibrary/picard_metrics" },
                 mode: 'copy',
                 saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
             ]
@@ -397,7 +397,7 @@ if (!params.skip_preseq) {
             ext.args   = '-verbose -bam -seed 1'
             ext.prefix = { "${meta.id}.mLb.clN" }
             publishDir = [
-                path: { "${params.outdir}/bwa/mergedLibrary/preseq" },
+                path: { "${params.outdir}/${params.aligner}/mergedLibrary/preseq" },
                 mode: 'copy',
                 saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
             ]
@@ -411,7 +411,7 @@ if (!params.skip_plot_profile) {
             ext.args   = 'scale-regions --regionBodyLength 1000 --beforeRegionStartLength 3000 --afterRegionStartLength 3000 --skipZeros --smartLabels'
             ext.prefix = { "${meta.id}.mLb.clN" }
             publishDir = [
-                path: { "${params.outdir}/bwa/mergedLibrary/deeptools" },
+                path: { "${params.outdir}/${params.aligner}/mergedLibrary/deeptools" },
                 mode: 'copy',
                 saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
             ]
@@ -419,7 +419,7 @@ if (!params.skip_plot_profile) {
         withName: DEEPTOOLS_PLOTPROFILE {
             ext.prefix = { "${meta.id}.mLb.clN" }
             publishDir = [
-                path: { "${params.outdir}/bwa/mergedLibrary/deeptools" },
+                path: { "${params.outdir}/${params.aligner}/mergedLibrary/deeptools" },
                 mode: 'copy',
                 saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
             ]
@@ -427,7 +427,7 @@ if (!params.skip_plot_profile) {
         withName: DEEPTOOLS_PLOTHEATMAP {
             ext.prefix = { "${meta.id}.mLb.clN" }
             publishDir = [
-                path: { "${params.outdir}/bwa/mergedLibrary/deeptools" },
+                path: { "${params.outdir}/${params.aligner}/mergedLibrary/deeptools" },
                 mode: 'copy',
                 saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
             ]
@@ -444,7 +444,7 @@ if (!params.skip_plot_fingerprint) {
             ].join(' ').trim()
             ext.prefix = { "${meta.id}.mLb.clN" }
             publishDir = [
-                path: { "${params.outdir}/bwa/mergedLibrary/deeptools" },
+                path: { "${params.outdir}/${params.aligner}/mergedLibrary/deeptools" },
                 mode: 'copy',
                 saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
             ]
@@ -464,7 +464,7 @@ if (params.macs_gsize) {
             ].join(' ').trim()
             publishDir = [
                 path: { [
-                    "${params.outdir}/bwa/mergedLibrary/macs2",
+                    "${params.outdir}/${params.aligner}/mergedLibrary/macs2",
                     params.narrow_peak? '/narrowPeak' : '/broadPeak'
                     ].join('') },
                 mode: 'copy',
@@ -492,7 +492,7 @@ if (params.macs_gsize) {
                 ext.args   = '-o ./ -p macs2_peak'
                 publishDir = [
                     path: { [
-                            "${params.outdir}/bwa/mergedLibrary/macs2",
+                            "${params.outdir}/${params.aligner}/mergedLibrary/macs2",
                             params.narrow_peak? '/narrowPeak' : '/broadPeak'
                             ].join('') },
                     mode: 'copy',
@@ -504,7 +504,7 @@ if (params.macs_gsize) {
                 // ext.prefix = 'peaks'
                 publishDir = [
                     path: { [
-                            "${params.outdir}/bwa/mergedLibrary/macs2",
+                            "${params.outdir}/${params.aligner}/mergedLibrary/macs2",
                             params.narrow_peak? '/narrowPeak' : '/broadPeak'
                             ].join('') },
                     mode: 'copy',
@@ -515,7 +515,7 @@ if (params.macs_gsize) {
                 ext.args   = '-o ./ -p macs2_annotatePeaks'
                 publishDir = [
                     path: { [
-                            "${params.outdir}/bwa/mergedLibrary/macs2",
+                            "${params.outdir}/${params.aligner}/mergedLibrary/macs2",
                             params.narrow_peak? '/narrowPeak' : '/broadPeak'
                             ].join('') },
                     mode: 'copy',
@@ -531,7 +531,7 @@ if (params.macs_gsize) {
                 ext.prefix = { "${meta.id}.consensus_peaks" }
                 publishDir = [
                     path: { [
-                            "${params.outdir}/bwa/mergedLibrary/macs2",
+                            "${params.outdir}/${params.aligner}/mergedLibrary/macs2",
                             params.narrow_peak? '/narrowPeak' : '/broadPeak'
                             ].join('') },
                     mode: 'copy',
@@ -542,7 +542,7 @@ if (params.macs_gsize) {
                 ext.args   = '-F SAF -O --fracOverlap 0.2'
                 publishDir = [
                     path: { [
-                            "${params.outdir}/bwa/mergedLibrary/macs2",
+                            "${params.outdir}/${params.aligner}/mergedLibrary/macs2",
                             params.narrow_peak? '/narrowPeak' : '/broadPeak'
                             ].join('') },
                     mode: 'copy',
@@ -559,7 +559,7 @@ if (params.macs_gsize) {
                 ext.prefix = 'consensus_peaks'
                 publishDir = [
                     path: { [
-                            "${params.outdir}/bwa/mergedLibrary/macs2",
+                            "${params.outdir}/${params.aligner}/mergedLibrary/macs2",
                             params.narrow_peak? '/narrowPeak' : '/broadPeak'
                             ].join('') },
                     mode: 'copy',
@@ -573,7 +573,7 @@ if (params.macs_gsize) {
     //     process {
     //         withName: DESEQ2_FEATURECOUNTS {
     //             publishDir = [
-    //                 path: { "${params.outdir}/bwa/mergedLibrary/macs2" },
+    //                 path: { "${params.outdir}/${params.aligner}/mergedLibrary/macs2" },
     //                 mode: 'copy',
     //                 saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
     //             ]
