Update modules configuration

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -166,7 +166,8 @@ process {
         ext.prefix = { "${meta.id}.Lb.sorted" }
         publishDir = [
             path: { "${params.outdir}/${params.aligner}/samtools" },
-            // enabled: params.save_align_intermeds
+            mode: 'copy'
+            // enabled: params.save_align_intermeds // CHECK
         ]
     }
 
@@ -174,7 +175,9 @@ process {
         ext.prefix = { "${meta.id}.Lb.sorted" }
         publishDir = [
             path: { "${params.outdir}/${params.aligner}/samtools" },
-            // enabled: params.save_align_intermeds
+            mode: 'copy',
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename } // CHECK
+            // enabled: params.save_align_intermeds // CHECK
         ]
     }
 
@@ -182,37 +185,14 @@ process {
         ext.prefix = { "${meta.id}.Lb.sorted" }
         publishDir = [
             path: { "${params.outdir}/${params.aligner}/library/samtools_stats" },
-            // enabled: false
+            mode: 'copy',
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
     }
-
-    // withName: 'NFCORE_CHIPSEQ:CHIPSEQ:.*:BAM_SORT_SAMTOOLS:BAM_STATS_SAMTOOLS:SAMTOOLS_FLAGSTAT' {
-    //     ext.prefix = { "${meta.id}.Lb.sorted" }
-    //     publishDir = [
-    //         path: { "${params.outdir}/${params.aligner}/library/samtools_stats_flagstat" },
-    //         // enabled: false
-    //     ]
-    // }
-    // withName: 'NFCORE_CHIPSEQ:CHIPSEQ:.*:BAM_SORT_SAMTOOLS:BAM_STATS_SAMTOOLS:SAMTOOLS_IDXSTATS' {
-    //     ext.prefix = { "${meta.id}.Lb.sorted" }
-    //     publishDir = [
-    //         path: { "${params.outdir}/${params.aligner}/samtools_idxstats" },
-    //         // enabled: false
-    //     ]
-    // }
 }
 
 if (params.aligner == 'bwa') {
     process {
-        // withName: BWA_INDEX {
-        //     ext.args   = '-a bwtsw'
-        //     publishDir = [
-        //         path: { "${params.outdir}/genome/index" },
-        //         mode: 'copy',
-        //         saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
-        //         enable: params.save_reference
-        //     ]
-        // }
         withName: BWA_MEM {
             ext.args   = [
                             '-M',
@@ -231,14 +211,6 @@ if (params.aligner == 'bwa') {
 
 if (params.aligner == 'bowtie2') {
     process {
-        // withName: 'BOWTIE2_BUILD' {
-        //     ext.args   = ''
-        //     publishDir = [
-        //         path: { "${params.outdir}/genome/index" },
-        //         mode: 'copy',
-        //         saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
-        //     ]
-        // }
         withName: 'BOWTIE2_ALIGN' {
             ext.args   = ''
             ext.prefix = { "${meta.id}.Lb" }
@@ -253,14 +225,6 @@ if (params.aligner == 'bowtie2') {
 
 if (params.aligner == 'star') {
     process {
-        // withName: STAR_GENOMEGENERATE {
-        //     ext.args   = ''
-        //     publishDir = [
-        //         path: { "${params.outdir}/genome/index" },
-        //         mode: 'copy',
-        //         saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
-        //     ]
-        // }
         withName: '.*:ALIGN_STAR:STAR_ALIGN' {
             ext.args   = [
                 '--runMode alignReads',
@@ -310,14 +274,15 @@ process {
         ext.prefix = { "${meta.id}.mLb.mkD.sorted" }
         publishDir = [
             [
-                path: { "${params.outdir}/${params.aligner}/mergedLibrary" },
+                path: { "${params.outdir}/${params.aligner}/mergedLibrary/picard_metrics" },
                 mode: 'copy',
-                pattern: '*metrics.txt'
+                pattern: '*.metrics.txt'
             ],
             [
                 path: { "${params.outdir}/${params.aligner}/mergedLibrary" },
                 mode: 'copy',
                 pattern: '*.bam'
+                enabled: params.save_align_intermeds
             ]
         ]
     }
@@ -345,6 +310,7 @@ process {
             path: { "${params.outdir}/${params.aligner}/mergedLibrary" },
             mode: 'copy',
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+            enabled: params.save_align_intermeds
         ]
     }
 
@@ -390,14 +356,15 @@ process {
         publishDir = [
             path: { "${params.outdir}/${params.aligner}/mergedLibrary/phantompeakqualtools" },
             mode: 'copy',
-            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+            pattern: "*.{out,pdf}"
         ]
     }
 
     withName: MULTIQC_CUSTOM_PHANTOMPEAKQUALTOOLS {
         publishDir = [
-            path: { "${params.outdir}/multiqc" },
-            enabled: false
+            path: { "${params.outdir}/${params.aligner}/mergedLibrary/phantompeakqualtools" },
+            mode: 'copy',
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
     }
 
@@ -407,7 +374,7 @@ process {
             [
                 path: { "${params.outdir}/${params.aligner}/mergedLibrary/bigwig" },
                 mode: 'copy',
-                saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+                pattern: "*.bigWig"
             ],
             [
                 path: { "${params.outdir}/${params.aligner}/mergedLibrary/bigwig/scale" },
@@ -438,7 +405,7 @@ if (!params.skip_picard_metrics) {
                 [
                     path: { "${params.outdir}/${params.aligner}/mergedLibrary/picard_metrics" },
                     mode: 'copy',
-                    pattern: "*.{alignment_summary_metrics,base_distribution_by_cycle_metrics,insert_size_metrics,quality_by_cycle_metrics,quality_distribution_metrics,txt}"
+                    pattern: "*_metrics"
                 ],
                 [
                     path: { "${params.outdir}/${params.aligner}/mergedLibrary/picard_metrics/pdf" },
@@ -471,6 +438,8 @@ if (!params.skip_plot_profile) {
             ext.prefix = { "${meta.id}.mLb.clN" }
             publishDir = [
                 path: { "${params.outdir}/${params.aligner}/mergedLibrary/deeptools/plotProfile" },
+                mode: 'copy',
+                saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
             ]
         }
 
@@ -539,14 +508,19 @@ if (params.macs_gsize) {
                     params.narrow_peak? '/narrowPeak' : '/broadPeak',
                     '/qc'
                     ].join('') },
-                enable: false
+                enabled: false
             ]
         }
 
         withName: MULTIQC_CUSTOM_PEAKS {
             publishDir = [
-                path: { "${params.outdir}/multiqc" },
-                enabled: false
+                path: { [
+                    "${params.outdir}/${params.aligner}/mergedLibrary/macs2",
+                    params.narrow_peak? '/narrowPeak' : '/broadPeak',
+                    '/qc'
+                ].join('') },
+                mode: 'copy',
+                saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
             ]
         }
     }
@@ -558,8 +532,9 @@ if (params.macs_gsize) {
                 publishDir = [
                     path: { [
                         "${params.outdir}/${params.aligner}/mergedLibrary/macs2",
-                        params.narrow_peak? '/narrowPeak' : '/broadPeak'
-                        ].join('') },
+                        params.narrow_peak? '/narrowPeak' : '/broadPeak',
+                        '/qc'
+                    ].join('') },
                     mode: 'copy',
                     saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
                 ]
