Fix tyops in modules.config

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -167,7 +167,6 @@ process {
         publishDir = [
             path: { "${params.outdir}/${params.aligner}/samtools" },
             mode: 'copy'
-            // enabled: params.save_align_intermeds // CHECK
         ]
     }
 
@@ -177,7 +176,6 @@ process {
             path: { "${params.outdir}/${params.aligner}/samtools" },
             mode: 'copy',
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename } // CHECK
-            // enabled: params.save_align_intermeds // CHECK
         ]
     }
 
@@ -281,7 +279,7 @@ process {
             [
                 path: { "${params.outdir}/${params.aligner}/mergedLibrary" },
                 mode: 'copy',
-                pattern: '*.bam'
+                pattern: '*.bam',
                 enabled: params.save_align_intermeds
             ]
         ]
@@ -309,7 +307,7 @@ process {
         publishDir = [
             path: { "${params.outdir}/${params.aligner}/mergedLibrary" },
             mode: 'copy',
-            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
             enabled: params.save_align_intermeds
         ]
     }
